# bootcamp_python_criacao_api

./: Dockerfile  README.md  fast_api_exemplo.py  pyproject.toml
src/: database.py  main.py  models.py  schema.py
